fix drag and drop on mobile (vibe coded)

--- a/webui/src/app/globals.css
+++ b/webui/src/app/globals.css
@@ -18,6 +18,7 @@ a {
 @theme {
   --color-relaxing-purple: rgb(92, 82, 133);
   --color-relaxing-blue: #546575;
+  --color-overbright-purple: #786e9f;
   --color-navbar-navy: rgb(4, 22, 32);
   --color-knob-white: #fdfcff;
   --color-salvation-green: rgb(0, 153, 102);
